[package]
name = "epic-calc"
version = "0.1.0"
authors = ["zeeshanok <zeeshanv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
crossterm_input = "0.5.0"
ansi_term = "0.12"
ansi-escapes = "0.1.0"
clipboard = "0.5.0"